[gd_scene load_steps=16 format=3 uid="uid://txud1r53w44n"]

[ext_resource type="Texture2D" uid="uid://c28pm1lnwddcy" path="res://assets/Menu_assets/pictures/Menu_bg.jpg" id="1_h1ogf"]
[ext_resource type="Script" path="res://scenes/menu_scenes/main_menu.gd" id="1_y02gn"]
[ext_resource type="Texture2D" uid="uid://cff0v0umm8ol2" path="res://assets/Menu_assets/Buttons/normal/settings_button_1.png" id="2_0r6xh"]
[ext_resource type="Texture2D" uid="uid://bdpulxuaafcip" path="res://assets/Menu_assets/Buttons/normal/newgame_button.png" id="4_ajx67"]
[ext_resource type="Texture2D" uid="uid://dgplll4u8q357" path="res://assets/Menu_assets/Buttons/hover/main_settings_button_hover.png" id="4_ltb6d"]
[ext_resource type="Texture2D" uid="uid://cy6bpfikdudma" path="res://assets/Menu_assets/Buttons/hover/newgame_button_hover.png" id="5_e20ud"]
[ext_resource type="Texture2D" uid="uid://bnm2v6gn0pxb7" path="res://assets/Menu_assets/Buttons/normal/levelSelect_button.png" id="6_qv1c5"]
[ext_resource type="Texture2D" uid="uid://6ruj8iq0ce0l" path="res://assets/Menu_assets/Buttons/hover/levelSelect_button_hover.png" id="7_wh2oc"]
[ext_resource type="Script" path="res://scripts/button_scripts/selectLevel_button.gd" id="8_x11no"]
[ext_resource type="Texture2D" uid="uid://swjmoyycvddd" path="res://assets/Menu_assets/Buttons/normal/exit_button.png" id="9_qfjs0"]
[ext_resource type="Texture2D" uid="uid://6avvn0oyfyhi" path="res://assets/Menu_assets/Buttons/hover/exit_button_hover.png" id="10_a0400"]
[ext_resource type="PackedScene" uid="uid://dl4houhovkqae" path="res://scenes/menu_scenes/settings_menu.tscn" id="11_ctmt4"]
[ext_resource type="AudioStream" uid="uid://ynqooi3tgevo" path="res://assets/Music & Sounds/music/Track08.ogg" id="12_iae88"]
[ext_resource type="AudioStream" uid="uid://cdnd0u3cfljyj" path="res://assets/Music & Sounds/sfx/mouse_click.mp3" id="13_nivpl"]
[ext_resource type="Texture2D" uid="uid://cwytdfhm7o2vp" path="res://assets/game_title.png" id="15_rdvj0"]

[node name="main_menu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_y02gn")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h1ogf")

[node name="settings_button" type="TextureButton" parent="."]
offset_left = 928.0
offset_top = 64.0
offset_right = 1870.0
offset_bottom = 926.0
scale = Vector2(0.21, 0.21)
action_mode = 0
texture_normal = ExtResource("2_0r6xh")
texture_hover = ExtResource("4_ltb6d")

[node name="newGame_button" type="TextureButton" parent="."]
light_mask = 0
visibility_layer = 512
offset_left = 80.0
offset_top = 312.0
offset_right = 302.0
offset_bottom = 375.0
scale = Vector2(1.5, 1.5)
action_mode = 0
texture_normal = ExtResource("4_ajx67")
texture_hover = ExtResource("5_e20ud")

[node name="selectLevel_button" type="TextureButton" parent="."]
offset_left = 88.0
offset_top = 408.0
offset_right = 310.0
offset_bottom = 471.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("6_qv1c5")
texture_hover = ExtResource("7_wh2oc")
script = ExtResource("8_x11no")

[node name="exit_button" type="TextureButton" parent="."]
offset_left = 96.0
offset_top = 504.0
offset_right = 318.0
offset_bottom = 567.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("9_qfjs0")
texture_hover = ExtResource("10_a0400")

[node name="settings_menu" parent="." instance=ExtResource("11_ctmt4")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_iae88")
volume_db = -20.0
autoplay = true
bus = &"Music"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("13_nivpl")
volume_db = -12.0
bus = &"SFX"

[node name="TextureRect2" type="TextureRect" parent="."]
anchors_preset = -1
anchor_right = 0.396
anchor_bottom = 0.185
offset_left = 56.0
offset_top = 48.0
offset_right = 574.808
offset_bottom = 222.12
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_rdvj0")

[connection signal="mouse_entered" from="settings_button" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_entered" from="newGame_button" to="." method="_on_new_game_button_mouse_entered"]
[connection signal="mouse_entered" from="selectLevel_button" to="." method="_on_select_level_button_mouse_entered"]
[connection signal="mouse_entered" from="exit_button" to="." method="_on_exit_button_mouse_entered"]
